# 3d-models

./: .gitattributes  .gitignore  .mise.toml  Brewfile  Makefile  README.md
projects/_example/: README.md
projects/_example/src/: cube.scad
projects/captain_c/: README.md
projects/captain_c/exports/: CaptainC.3mf  CaptainC.stl
projects/captain_c/src/: CaptainC.FCStd
projects/corner_edge_protectors/: README.md
projects/f-150_propower_cover/src/: README.md  panel.json  panel.scad  pyproject.toml  topo_panel_generator.py
projects/f-150_propower_cover/src/topo_output/: border.dxf  contour_grooves_240.dxf  contour_grooves_260.dxf  contour_grooves_280.dxf  contour_grooves_300.dxf  contour_grooves_320.dxf  contours.dxf  level_100.dxf  level_120.dxf  level_140.dxf  level_160.dxf  level_180.dxf  level_20.dxf  level_200.dxf  level_220.dxf  level_240.dxf  level_260.dxf  level_280.dxf  level_300.dxf  level_320.dxf  level_40.dxf  level_60.dxf  level_80.dxf  relief.scad  roads.dxf  water.dxf  water_bodies.dxf  waterways.dxf
projects/f-150_propower_cover/src/topo_output/.cache/: roads_9b7cb957e99aff37.json  roads_b4add28f9476fec8.json  water_fa298afba18ccb6b.json  waterbodies_cd49161c51942a5c.json  waterways_3b60d57999281e79.json  waterways_ae106b6b3bcebb45.json
projects/fiona_8_bday_party/: README.md
projects/lcc_logo/: README.md
projects/office_billy_accessories/: README.md
projects/plier_holder/: README.md
projects/skadis_t_clip_accessories/: README.md
projects/slot_car_repair/: README.md
projects/tape_bracket/: README.md
(+43 files in other folders)
