[project]
name = "topo-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.3.1",
    "ezdxf",
    "isort>=8.0.1",
    "matplotlib",
    "numpy",
    "requests",
    "scipy>=1.17.1",
    "shapely",
    "srtm.py",
    "ssort>=0.16.0",
]
